2012-09-25  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* libio/fileops.c (_IO_new_file_seekoff): Fix typos in
	comments.

2012-09-24  Dmitry V. Levin  <ldv@altlinux.org>

	* catgets/test-gencat.sh: Add "set -e".
	* elf/tst-pathopt.sh: Likewise.
	* grp/tst_fgetgrent.sh: Likewise.
	* iconvdata/run-iconv-test.sh: Likewise.
	* intl/tst-gettext.sh: Likewise.
	* intl/tst-gettext2.sh: Likewise.
	* intl/tst-gettext4.sh: Likewise.
	* intl/tst-gettext6.sh: Likewise.
	* intl/tst-translit.sh: Likewise.
	* io/ftwtest-sh: Likewise.
	* libio/test-freopen.sh: Likewise.
	* malloc/tst-mtrace.sh: Likewise.
	* posix/globtest.sh: Likewise.
	* posix/tst-getconf.sh: Likewise.
	* posix/wordexp-tst.sh: Likewise.
	* stdio-common/tst-printf.sh: Likewise.
	* stdio-common/tst-unbputc.sh: Likewise.
	* stdlib/tst-fmtmsg.sh: Likewise.
	* sysdeps/x86_64/tst-xmmymm.sh: Likewise.
	* catgets/Makefile: Do not specify -e option when running
	testsuite shell scripts.
	* elf/Makefile: Likewise.
	* grp/Makefile: Likewise.
	* iconvdata/Makefile: Likewise.
	* intl/Makefile: Likewise.
	* io/Makefile: Likewise.
	* libio/Makefile: Likewise.
	* malloc/Makefile: Likewise.
	* posix/Makefile: Likewise.
	* stdio-common/Makefile: Likewise.
	* stdlib/Makefile: Likewise.
	* sysdeps/x86_64/Makefile: Likewise.

	* io/ftwtest-sh: Add copyright header.
	* posix/globtest.sh: Likewise.
	* posix/tst-getconf.sh: Likewise.
	* posix/wordexp-tst.sh: Likewise.
	* sysdeps/x86_64/tst-xmmymm.sh: Likewise.

2012-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #13679]
	* Makeconfig (+link): Defined as $(+link-static) if
	$(build-shared) isn't yes.
	(link-tests): Defined as $(+link-static-tests) if $(build-shared)
	isn't yes.
	(static-gnulib): Add -lgcc_eh if $(build-shared) isn't yes.

	* Makeconfig (+postctorT): Replace crtendS.o with crtend.o.

	[BZ #14562]
	* malloc/arena.c (heap_trim): Properly get fencepost and adjust
	new chunk size with MALLOC_ALIGN_MASK.

2012-09-24  Joseph Myers  <joseph@codesourcery.com>

	[BZ #5044]